src/objects/dwp_kitv__Visit_Topic__c.object
<CustomObject>
    <description>Topics about visits</description>
    <fields>
        <fullName>dwp_kitv__More_Recent_Visits__c</fullName>
        <description>Deprecated</description>
        <formula>IF(ISPICKVAL(dwp_kitv__visit_id__r.dwp_kitv__visit_status_type__c,&apos;Finalized&apos;),TEXT(DATEVALUE(dwp_kitv__visit_id__r.dwp_kitv__visit_start_date__c))&amp;&apos; (&apos;&amp;TEXT(dwp_kitv__visit_id__r.dwp_kitv__visit_status_type__c)&amp;&apos;)&apos;,IF(dwp_kitv__visit_id__r.dwp_kitv__visit_end_date__c&lt;NOW(),&apos;Overdue&apos;,&apos; &apos;&amp;TEXT(DATEVALUE(dwp_kitv__visit_id__r.dwp_kitv__visit_start_date__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>More Recent Visits (Deprecated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__most_recent_visits__c</fullName>
        <formula>IF(ISPICKVAL(dwp_kitv__visit_id__r.dwp_kitv__visit_status_type__c,&apos;Finalized&apos;),TEXT(DATEVALUE(dwp_kitv__visit_id__r.dwp_kitv__visit_start_date__c))&amp;&apos; (&apos;&amp;TEXT(dwp_kitv__visit_id__r.dwp_kitv__visit_status_type__c)&amp;&apos;)&apos;,IF(dwp_kitv__visit_id__r.dwp_kitv__visit_end_date__c&lt;NOW(),&apos;Overdue&apos;,&apos; &apos;&amp;TEXT(DATEVALUE(dwp_kitv__visit_id__r.dwp_kitv__visit_start_date__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Most recent visits</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__opportunity_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Opportunity</description>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.IsClosed</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Visit Topics</relationshipLabel>
        <relationshipName>Visit_Topics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__summary__c</fullName>
        <description>Formula field that gets the value from Opportunity Name and/or Topic Name.</description>
        <formula>IF(NOT(ISBLANK(dwp_kitv__opportunity_id__c )), IF(NOT(ISBLANK(dwp_kitv__topic_desc__c)), dwp_kitv__opportunity_id__r.Name + &apos; · &apos; + dwp_kitv__topic_desc__c, dwp_kitv__opportunity_id__r.Name), IF(NOT(ISBLANK(dwp_kitv__topic_desc__c)), dwp_kitv__topic_desc__c, &apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary Topic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__topic_desc__c</fullName>
        <description>Topic description</description>
        <label>Topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__visit_done_type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the visit is complete</description>
        <label>Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__visit_id__c</fullName>
        <description>Parent Object</description>
        <label>Visit</label>
        <referenceTo>dwp_kitv__Visit__c</referenceTo>
        <relationshipLabel>Visit Topics</relationshipLabel>
        <relationshipName>Visit_Topics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Visit Topic</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VT-{0000000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Topics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>dwp_kitv__empty_topic</fullName>
        <active>true</active>
        <description>It&apos;s not allowed add a visit topic empty</description>
        <errorConditionFormula>ISBLANK(  dwp_kitv__topic_desc__c )</errorConditionFormula>
        <errorMessage>It&apos;s not allowed add a visit topic empty</errorMessage>
    </validationRules>
</CustomObject>